Add Makefile generated directories

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 # Ignore object files
 *.o
 
+# Ignore makefile generated folders
+dep/
+obj/
+xtest_expr/
+xtest_lexer/
+xtest_parser/
+
 # Ignore TeX files for displaying expression trees 
 tree.*
 tree_header.tex
